# crudnews

./: .env  .gitignore  Dockerfile  Makefile  docker-compose.yml  mkdocs.yml  pyproject.toml
.github/workflows/: continuos_integration.yml  continuous_integration.yml
crudnews/: app.py  config.py  db.py  main.py
crudnews/models/: articles_models.py
crudnews/routers/: articles.py  exception_handlers.py
docs/: README.md
tests/: conftest.py  test_articles.py
