[tool.poetry]
name = "crudnews"
version = "0.1.0"
description = "micro web app for fictional news"
authors = ["Marco Lemos <marco.trab4@gmail.com>"]
readme =  ["docs/README.md"]

[tool.poetry.dependencies]
python = "^3.11"
flask = "^2.2.2"


[tool.poetry.group.dev.dependencies]
blue = "^0.9.1"
isort = "^5.12.0"
mkdocs = "^1.4.2"
pytest = "^7.2.1"
pytest-cov = "^4.0.0"
pip-audit = "^2.4.14"
httpie = "^3.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
